# lesson_14

./: .env.example  .gitignore  README.md  jenkinsfile  pyproject.toml  pytest.ini
config/: settings.py
core/: __init__.py  attach.py  browser.py
pages/: app_page.py  footer.py  instruction_page.py  main_page.py  search_page.py  search_results_page.py
tests/: conftest.py  test_app_page.py  test_fail_header_check.py  test_footer.py  test_footer_support_button.py  test_instruction_page.py  test_main_page.py  test_search_page.py  test_search_results.py
